# odin-on-embedded

./: CMakeLists.txt  README.md  ols.json  prj.conf
src/: main.odin
zephyr/bootstrap/: assertions.odin  bootstrap.c  bootstrap.odin
zephyr/embedded_mem/: allocators.odin
